# for-git

./: (-.-)manifesto_full.txt  (-0-)workflow_full.md  (...)implementation.txt  (.05)-build-spec.txt  (0.0)-files-to-prompt.sh  (01qs)-quickstart.txt  (Vinal)Target-Site.txt  (Vinal)Target-Site.txt~  (ioi).index.txt  (oXo)site-builder.txt  .env.example  .gitignore  .lighthouserc.json  01law-build_laws.txt  01rf-II_prompt-library.txt  01rf-I_prompt-library.txt  02law-files_to_prompt.py  02rf-Funell3.txt  02rf-Ifunell.txt  02rf-funell2.txt  04md-standard.txt  05ref-ex_syntax-code.txt  06ref-seo-metadata.yml  1. Design Archetype vs Ideal Use Case (with Example URL).txt  AUTO-SCOUT_Python3-Script_FIXXX.py.txt  AUTONOMOUS_SCOUT_GUIDE.md  BUILD-ORDER-MASTER.md  BUILD_INSTRUCTIONS.txt  COMMANDS.md  DEMO-OUTPUT-EXAMPLE.txt  DEPLOYMENT-CHECKLIST.txt  EXAMPLE_vite_bootstrap_optimized3.py  GPT-master-prompt-build.txt  GPT-master-prompt-build.txt~  GPT-site-customization.txt  III_prompt-library.txt  INSTALLATION-USAGE.txt  LICENSE  Makefile  MetaData1.txt  (+25 more)
(--)pre-game/: ACCESSIBILITY.md  App.tsx  OrderModal.tsx  README.md  SEO.md  SHN-2025-10-26-BLD-001.json  ToastEmbed.tsx  axe.yml  index.html  lighthouse.yml  main.tsx  package.json  tokens.css  tokens.json  tsconfig.json
001-four-principles/: (.02)for_understanding.txt  (.03)code_standards.txt  (.04)component_library.txt  (.09)architecture.txt
778-prompt-template/: (.05)universal_prompt_template.txt  (.05)universal_prompt_template.txt~  (.06)ch405s_prompt_template.txt
779-prompt_craft/: (.07)component_prompt_cmnds.txt
(+160 files in other folders)
